fix : Fixing jdk version bugs